# talos

./: .~lock.1.csv#  1  1.csv  1.py  README.md  diagnose_worker.py  pyproject.toml  test_scope_fix.py
.github/instructions/: how to code.instructions.md
docs/: about-talos.md  architecture.md  bac-decision-filter-sample.yaml  bac-decision-filter.md  cli-cheat-sheet.md  ui-architecture.md  updates.md
talos/: __init__.py  __main__.py  config.py
talos.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
talos/input_validation/: __init__.py  cli.py  config.py  db.py  engine.py  phases.py
talos/projects/: __init__.py  access.py  access_cli.py  annotations.py  attack_cli.py  attack_config.py  auth.py  auth_cli.py  auth_config_cli.py  cli.py  db.py  endpoint_cli.py  endpoints.py  flow_cli.py  manager.py  model.py  mutation.py  mutation_cli.py  outscope.py  outscope_cli.py  parameters.py  policy.py  policy_score.py  session_health.py
talos/projects/bac/: __init__.py  auth_prereq.py  candidates.py  cli.py  decision_filter.py  engine.py  filter_cli.py  variants.py
talos/proxy/: __init__.py  addon.py  cli.py  default_headers_drop.txt  queue.py  scope.py
talos/replay/: __init__.py  auth_strip.py  cli.py  db.py  diff.py  engine.py
talos/scheduler/: __init__.py  cli.py  db.py  job.py  scheduler.py
talos/ui/: __init__.py  app.py  cli.py  db.py  proxy_manager.py
talos/ui/api/: __init__.py  _deps.py  access.py  attacks.py  auth.py  endpoints.py  flows.py  modules.py  mutations.py  outscope.py  projects.py  proxy.py  (+4 more)
talos/worker/: __init__.py  worker.py
(+17 files in other folders)
