[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "talos"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mitmproxy>=10.0",
    "fastapi>=0.110",
    "jinja2>=3.1",
    "uvicorn>=0.29",
    "httpx>=0.27",
]

[project.scripts]
talos = "talos.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["talos*"]
